--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px #580303;;
-    height: 340px;
+    height: 320px;
     width: 350px;
     border-top: 6px solid #990033;
     border-bottom: 6px solid #990033;
@@ -66,7 +66,7 @@ header {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px #580303;;
-    height: 340px;
+    height: 320px;
     width: 350px;
     border-top: 6px solid #990033;
     border-bottom: 6px solid #990033;
@@ -97,7 +97,7 @@ header {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px #580303;;
-    height: 490px;
+    height: 470px;
     width: 350px;
     border-top: 6px solid #990033;
     border-bottom: 6px solid #990033;
@@ -114,6 +114,37 @@ header {
 }
 
 .avisosmsg p {
+    margin: 10px 0 0;
+    color: #333333;
+    font-size: 1.1em;
+}
+
+.avisosjantares {
+    font-family: 'Montserrat', sans-serif;
+    position: absolute;
+    top: 80px;
+    left: 1330px;
+    background-color: transparent;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px #580303;;
+    height: 490px;
+    width: 350px;
+    border-top: 6px solid #990033;
+    border-bottom: 6px solid #990033;
+    color: #333333;
+    z-index: 10;
+    font-size: 1.3em;
+}
+
+.avisosjantares h2 {
+    margin-top: 25px;
+    color: #990033;
+    font-size: 1.5em;
+    text-align: center; /* Centraliza o texto horizontalmente */
+}
+
+.avisosjantares p {
     margin: 10px 0 0;
     color: #333333;
     font-size: 1.1em;
@@ -218,6 +249,54 @@ header {
 .container div[contenteditable="true"] {
     text-decoration: none; /* Remove qualquer sublinhado */
     outline: none; /* Remove o contorno ao clicar */
+}
+
+.jantares {
+    background-color: transparent;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 20px #580303;
+    width: 700px;
+    border-top: 6px solid #990033;
+    border-bottom: 6px solid #990033;
+    max-height: 90vh;
+    overflow-y: auto;
+    box-sizing: border-box;
+    position: relative;
+    height: 750px;
+}
+
+.capacidade {
+    font-family: 'Montserrat', sans-serif;
+    background-color: transparent;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 20px #580303;
+    width: 1000px;
+    border-top: 6px solid #990033;
+    border-bottom: 6px solid #990033;
+    max-height: 90vh;
+    overflow-y: auto;
+    box-sizing: border-box;
+    position: relative;
+    height: 750px;
+    left: 150px;
+}
+
+.capacidade p{
+    font-size: 1.16em;
+}
+
+.capacidade div[contenteditable="true"] {
+    text-decoration: none; /* Remove qualquer sublinhado */
+    outline: none; /* Remove o contorno ao clicar */
+}
+
+.jantares button{
+    width: 400px;
+    display: block; /* Certifica-se de que o botão ocupe toda a linha */
+    margin: 0 auto; /* Centraliza horizontalmente */
+    margin-top: 50px;
 }
 
 /* Estilos para cabeçalhos */
