--- a/assets/css/global/global.css
+++ b/assets/css/global/global.css
@@ -1,5 +1,5 @@
 @import '../pages/avisos.css';
-@import '../pages/Home/page.css';
+@import '../pages/página\ inicial/page.css';
 @import './logo.css';
 
 /* Estilos para o corpo da página */
