--- a/assets/css/global/global.css
+++ b/assets/css/global/global.css
@@ -1,6 +1,9 @@
-@import '../pages/avisos.css';
-@import '../pages/página\ inicial/page.css';
+@import './cofbot.css';
 @import './logo.css';
+@import '../pages/1\ -\ página\ inicial/page.css';
+@import '../pages/2\ -\ mensagens\ frequentes/frequentes.css';
+@import '../pages/3\ -\ mensagens\ automatizadas/automatizadas.css';
+@import '../pages/4\ -\ jantares/jantares.css';
 
 /* Estilos para o corpo da página */
 body {
@@ -41,23 +44,6 @@ header {
     z-index: 10;
 }
 
-/* Estilos do contêiner principal */
-
-.frequente {
-    background-color: transparent;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 20px #580303;
-    width: 700px;
-    border-top: 6px solid #990033;
-    border-bottom: 6px solid #990033;
-    max-height: 90vh;
-    overflow-y: auto;
-    box-sizing: border-box;
-    position: relative;
-    height: 750px;
-}
-
 .cancel {
     font-family: 'Montserrat', sans-serif;
     background-color: transparent;
@@ -84,48 +70,6 @@ header {
     outline: none; /* Remove o contorno ao clicar */
 }
 
-.frequente button{
-    width: 400px;
-    display: block; /* Certifica-se de que o botão ocupe toda a linha */
-    margin: 0 auto; /* Centraliza horizontalmente */
-    margin-top: 50px;
-}
-
-.container {
-    background-color: transparent;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 20px #580303;
-    width: 700px;
-    border-top: 6px solid #990033;
-    border-bottom: 6px solid #990033;
-    max-height: 90vh;
-    overflow-y: auto;
-    box-sizing: border-box;
-    position: relative;
-    height: 750px;
-}
-
-.container div[contenteditable="true"] {
-    text-decoration: none; /* Remove qualquer sublinhado */
-    outline: none; /* Remove o contorno ao clicar */
-}
-
-.jantares {
-    background-color: transparent;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 20px #580303;
-    width: 700px;
-    border-top: 6px solid #990033;
-    border-bottom: 6px solid #990033;
-    max-height: 90vh;
-    overflow-y: auto;
-    box-sizing: border-box;
-    position: relative;
-    height: 750px;
-}
-
 .capacidade {
     font-family: 'Montserrat', sans-serif;
     background-color: transparent;
@@ -150,13 +94,6 @@ header {
 .capacidade div[contenteditable="true"] {
     text-decoration: none; /* Remove qualquer sublinhado */
     outline: none; /* Remove o contorno ao clicar */
-}
-
-.jantares button{
-    width: 400px;
-    display: block; /* Certifica-se de que o botão ocupe toda a linha */
-    margin: 0 auto; /* Centraliza horizontalmente */
-    margin-top: 50px;
 }
 
 /* Estilos para cabeçalhos */
@@ -407,7 +344,6 @@ button:hover {
     box-shadow: 0 0 10px rgba(153, 0, 51, 0.2);
 }
 
-/* Estilos do robô flutuante */
 .floating {
     position: absolute;
     bottom: 20px;
