--- a/assets/css/pages/seção/5 - jantares/jantares.css
+++ b/assets/css/pages/seção/5 - jantares/jantares.css
@@ -1,5 +1,6 @@
-@import '../global/global.css';
+@import '../../../global/global.css';
 @import './avisosjantares.css';
+@import './botões/capacidade.css';
 
 .jantares {
     background-color: transparent;
@@ -22,3 +23,4 @@
     margin: 0 auto; /* Centraliza horizontalmente */
     margin-top: 50px;
 }
+
