--- a/assets/css/global/cofbot.css
+++ b/assets/css/global/cofbot.css
@@ -3,14 +3,21 @@
 .floating {
     position: absolute;
     bottom: 20px;
-    top: 620px;
-    right: 250px;
+    right: 20px; /* Ajuste inicial da posição */
     width: 260px;
     height: auto;
     z-index: 10;
 }
 
 .floating img {
-    width: 100%;  
+    width: 100%;
     height: auto;
+}
+
+
+@media screen and (min-width: 2560px) {
+    /* Estilos específicos para telas com largura mínima de 2560px */
+    .floating{
+        right: 250px;
+    }
 }
