--- a/assets/css/pages/login/login.css
+++ b/assets/css/pages/login/login.css
@@ -1,3 +1,5 @@
+@import '../../global/global.css';
+
 .logincontainer {
     background: transparent;
     padding: 60px; /* Aumente o padding para dar mais espaço interno */
@@ -81,4 +83,43 @@
 .logincontainer input[type="password"]:focus {
     border-color: #990033;
     box-shadow: 0 0 10px rgba(153, 0, 51, 0.2);
+}
+
+/* 4k-2560px */
+@media screen and (min-width: 2560px) {
+    /* Estilos específicos para telas com largura mínima de 2560px */
+    .logincontainer{
+        height: 600px;
+        width: 550px;
+    }
+}
+
+/* L-1440px */
+@media screen and (min-width: 1440px) {
+    /* Estilos específicos para telas com largura mínima de 1440px */
+}
+
+/* laptop-1024px */
+@media screen and (min-width: 1024px) {
+    /* Estilos específicos para telas com largura mínima de 1024px */
+}
+
+/* tablet-768px */
+@media screen and (min-width: 768px) {
+    /* Estilos específicos para telas com largura mínima de 768px */
+}
+
+/* mobile L-425px */
+@media screen and (min-width: 425px) {
+    /* Estilos específicos para telas com largura mínima de 425px */
+}
+
+/* mobile M-375px */
+@media screen and (min-width: 375px) {
+    /* Estilos específicos para telas com largura mínima de 375px */
+}
+
+/* mobile S-320px */
+@media screen and (min-width: 320px) {
+    /* Estilos específicos para telas com largura mínima de 320px */
 }
