--- a/assets/css/global/global.css
+++ b/assets/css/global/global.css
@@ -5,6 +5,7 @@
 @import '../pages/seção/3\ -\ mensagens\ frequentes/frequentes.css';
 @import '../pages/seção/4\ -\ mensagens\ automatizadas/automatizadas.css';
 @import '../pages/login/login.css';
+@import '../pages/seção/5\ -\ cadastramento\ de\ questões/cadastro.css';
 
 /* Estilos para o corpo da página */
 body {
