--- a/assets/css/global/cofbot.css
+++ b/assets/css/global/cofbot.css
@@ -21,3 +21,51 @@
         right: 250px;
     }
 }
+
+@media screen and (min-width: 1440px) {
+    .floating{
+        right: 250px;
+    }
+}
+
+/* laptop-1024px */
+@media screen and (min-width: 1024px) {
+    .floating{
+        right: 250px;
+    }
+}
+
+/* tablet-768px */
+@media screen and (min-width: 768px) {
+    .floating{
+        right: 250px;
+    }
+}
+
+/* mobile L-425px */
+@media screen and (min-width: 425px) {
+    .floating{
+        right: 250px;
+    }
+}
+
+/* mobile M-375px */
+@media screen and (min-width: 375px) {
+    .floating{
+        right: 250px;
+        width: 170px;
+        height: auto;
+        right: -170px;
+        margin-bottom: -390px;
+    }
+}
+
+/* mobile S-320px */
+@media screen and (min-width: 320px) and (max-width: 374px) {
+    .floating{
+        width: 180px;
+        height: auto;
+        right: -170px;
+        margin-bottom: -400px;
+    }
+}
