--- a/assets/css/global/logo.css
+++ b/assets/css/global/logo.css
@@ -15,3 +15,59 @@
         top: 10px;
     }
 }
+
+/* 4k-2560px */
+@media screen and (min-width: 2560px) {
+    .logo{
+        left: 140px;
+        top: 10px;
+    }
+}
+
+/* L-1440px */
+@media screen and (min-width: 1440px) {
+    .logo{
+        left: 140px;
+        top: 10px;
+    }
+}
+
+/* laptop-1024px */
+@media screen and (min-width: 1024px) {
+    .logo{
+        left: 140px;
+        top: 10px;
+    }
+}
+
+/* tablet-768px */
+@media screen and (min-width: 768px) {
+    .logo{
+        left: 140px;
+        top: 10px;
+    }
+}
+
+/* mobile L-425px */
+@media screen and (min-width: 425px) {
+    .logo{
+        left: 140px;
+        top: 10px;
+    }
+}
+
+/* mobile M-375px */
+@media screen and (min-width: 375px) and (max-width: 424px) {
+    .logo{
+        left: -100px;
+        top: 120px;
+    }
+}
+
+/* mobile S-320px */
+@media screen and (min-width: 320px) and (max-width: 374px) {
+    .logo{
+        left: -100px;
+        top: 120px;
+    }
+}
