--- a/assets/css/pages/login/login.css
+++ b/assets/css/pages/login/login.css
@@ -146,7 +146,7 @@
 }
 
 /* L-1440px */
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1440px) and (max-width: 2559px){
     .logincontainer{
         height: 600px;
         width: 550px;
@@ -154,7 +154,7 @@
 }
 
 /* laptop-1024px */
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1439px){
     .logincontainer{
         height: 600px;
         width: 550px;
@@ -162,7 +162,7 @@
 }
 
 /* tablet-768px */
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px){
     .logincontainer{
         height: 600px;
         width: 550px;
@@ -173,7 +173,9 @@
 @media screen and (min-width: 425px) and (max-width: 767px) {
     .logincontainer{
         height: 600px;
-        width: 550px;
+        width: 500px;
+        margin-top: 200px;
+        left: 270px;
     }
 }
 
@@ -181,9 +183,9 @@
 @media screen and (min-width: 375px) and (max-width: 424px) {
     .logincontainer{
         height: 600px;
-        width: 370px;
-        margin-top: 250px;
-        left: 272.5px;
+        width: 350px;
+        margin-top: 200px;
+        left: 270px;
     }
 }
 
@@ -191,8 +193,8 @@
 @media screen and (min-width: 320px) and (max-width: 374px) {
     .logincontainer{
         height: 600px;
-        width: 290px;
-        margin-top: 250px;
-        left: 245px;
+        width: 250px;
+        margin-top: 150px;
+        left: 210px;
     }
 }
