--- a/assets/css/pages/login/login.css
+++ b/assets/css/pages/login/login.css
@@ -12,6 +12,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    justify-content: center;
+    align-items: center;
 }
 
 .logincontainer h2 {
@@ -21,6 +23,11 @@
     font-size: 2.2em; /* Aumente o tamanho da fonte do título */
     font-weight: 600;
 }
+
+.logincontainer h1 {
+    margin-top: 5px; /* Remove qualquer margem */
+}
+
 
 .logincontainer label {
     display: block;
@@ -192,9 +199,12 @@
 /* mobile S-320px */
 @media screen and (min-width: 320px) and (max-width: 374px) {
     .logincontainer{
-        height: 600px;
-        width: 250px;
-        margin-top: 150px;
-        left: 210px;
+        height: 550px;
+        width: 150px;
+        margin-top: 50px;
+        left: 160px;
+    }
+    .logincontainer h1{
+        margin-top: -30px;
     }
 }
