--- a/assets/css/global/logo.css
+++ b/assets/css/global/logo.css
@@ -8,24 +8,19 @@
     top: 30px;
 }
 
-@media screen and (min-width: 2560px) {
-    /* Estilos específicos para telas com largura mínima de 2560px */
-    .logo{
-        left: 140px;
-        top: 10px;
-    }
-}
+
 
 /* 4k-2560px */
-@media screen and (min-width: 2560px) {
+@media screen and (min-width: 2560px){
     .logo{
         left: 140px;
-        top: 10px;
+        width: 425px;
+        height: auto;
     }
 }
 
 /* L-1440px */
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1440px) and (max-width: 2559px){
     .logo{
         left: 140px;
         top: 10px;
@@ -49,7 +44,7 @@
 }
 
 /* mobile L-425px */
-@media screen and (min-width: 425px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
     .logo{
         left: -95px;
         top: 80px;
