--- a/assets/css/pages/login/login.css
+++ b/assets/css/pages/login/login.css
@@ -182,17 +182,20 @@
         height: 600px;
         width: 380px;
         margin-top: 180px;
-        left: 275px;
+        left: 262.5px;
     }
 }
 
 /* mobile M-375px */
 @media screen and (min-width: 375px) and (max-width: 424px) {
     .logincontainer{
-        height: 600px;
-        width: 350px;
-        margin-top: 200px;
-        left: 272.5px;
+        height: 550px;
+        width: 180px;
+        margin-top: 60px;
+        left: 190px;
+    }
+    .logincontainer h1{ 
+        margin-top: -40px;
     }
 }
 
