--- a/assets/css/global/cofbot.css
+++ b/assets/css/global/cofbot.css
@@ -38,36 +38,40 @@
 /* tablet-768px */
 @media screen and (min-width: 768px) and (max-width: 1023px){
     .floating{
-        right: 250px;
+        /*right: 250px;*/
+        display: none;
     }
 }
 
 /* mobile L-425px */
 @media screen and (min-width: 425px) and (max-width:767px){
     .floating{
-        width: 120px;
+        /*width: 120px;
         height: auto;
         right: -110px;
-        margin-bottom: -130px;
+        margin-bottom: -130px;*/
+        display: none;
     }
 }
 
 /* mobile M-375px */
 @media screen and (min-width: 375px) and (max-width:424px){
     .floating{
-        width: 120px;
+        /*width: 120px;
         height: auto;
         right: 15px;
-        margin-bottom: -5px;
+        margin-bottom: -5px;*/
+        display: none;
     }
 }
 
 /* mobile S-320px */
 @media screen and (min-width: 320px) and (max-width: 374px) {
     .floating{
-        width: 120px;
+        /*width: 120px;
         height: auto;
         right: 0px;
-        margin-bottom: 20px;
+        margin-bottom: 20px;*/
+        display: none;
     }
 }
