--- a/assets/css/global/logo.css
+++ b/assets/css/global/logo.css
@@ -28,7 +28,7 @@
 }
 
 /* laptop-1024px */
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1439px){
     .logo{
         left: 140px;
         top: 10px;
@@ -36,39 +36,43 @@
 }
 
 /* tablet-768px */
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px){
     .logo{
-        left: 140px;
-        top: 10px;
+        /*left: -90px;
+        top: 60px;*/
+        display: none;
     }
 }
 
 /* mobile L-425px */
 @media screen and (min-width: 425px) and (max-width: 767px) {
     .logo{
-        left: -130px;
+        /*left: -130px;
         top: 80px;
         width: 350px;
-        height: auto;
+        height: auto;*/
+        display: none;
     }
 }
 
 /* mobile M-375px */
 @media screen and (min-width: 375px) and (max-width: 424px) {
     .logo{
-        left: -70px;
+        /*left: -70px;
         top: 60px;
         width: 250px;
-        height: auto;
+        height: auto;*/
+        display: none;
     }
 }
 
 /* mobile S-320px */
 @media screen and (min-width: 320px) and (max-width: 374px) {
     .logo{
-        left: -80px;
+        /*left: -80px;
         top: 50px;
         width: 250px;
-        height: auto;
+        height: auto;*/
+        display: none;
     }
 }
